Add router links to pages

--- a/express/blog/views/posts/index.hbs
+++ b/express/blog/views/posts/index.hbs
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <a class="navbar-brand" href="posts.html">KINGSLEY IJOMAH</a>
+    <a class="navbar-brand" href="/posts">KINGSLEY IJOMAH</a>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="posts.html">Posts</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="archive.html">Archive</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li class="active"><a href="/posts">Posts</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/posts/archive">Archive</a></li>
+        <li><a href="/contact">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="new.html" class="new-post-link">New Post</a></li>
-        <li><a href="login.html">Log In</a></li>
+        <li><a href="/posts/new" class="new-post-link">New Post</a></li>
+        <li><a href="/login">Log In</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container-fluid -->
@@ -51,25 +51,7 @@
         <div class="lead">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et.
-          <a href="article.html" style="font-size: 20px;">Read More</a>
-        </div>
-
-        <footer>
-            <span class="label label-default">code</span>
-            <span class="label label-default">programming</span>
-            <span class="label label-default">coding</span>
-        </footer>
-        <hr>
-      </article>
-
-      <article>
-        <header><h2>Quis nostrud exercitation ullamco</h2></header>
-        <footer><small>Posted on: 1 Jan 2015</small></footer>
-
-        <div class="lead">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore.
-          <a href="article.html" style="font-size: 20px;">Read More</a>
+          <a href="/posts/view" style="font-size: 20px;">Read More</a>
         </div>
 
         <footer>
