--- a/express/blog/views/posts/new.hbs
+++ b/express/blog/views/posts/new.hbs
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <a class="navbar-brand" href="posts.html">KINGSLEY IJOMAH</a>
+    <a class="navbar-brand" href="/posts">KINGSLEY IJOMAH</a>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li><a href="posts.html">Posts</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="archive.html">Archive</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/posts">Posts</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/posts/archive">Archive</a></li>
+        <li><a href="/contact">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="new.html" class="new-post-link">New Post</a></li>
-        <li><a href="login.html">Log In</a></li>
+        <li><a href="/posts/new" class="new-post-link">New Post</a></li>
+        <li><a href="/login">Log In</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container-fluid -->
