--- a/express/blog/views/posts/index.html
+++ b/express/blog/views/posts/index.html
@@ -18,30 +18,7 @@
 
 <div class="container-fluid" id="container">
   <div class="row">
-    <div class="col-md-3 profile">
-      <aside class="center-block">
-        <img src="/images/dog.jpg" alt="cat" class="img-circle">
-        <h4>Kingsley Ijomah</h4>
-        <p>Software Eng. @ CODEHANCE</p>
-
-        <a class="twitter-follow-button"
-          href="https://twitter.com/kingsleyijomah"
-          data-show-count="true"
-          data-lang="en">
-          Follow @kingsleyijomah
-        </a>
-        <hr>
-        <p>Share this page:</p>
-        <ul>
-          <li><img src="/images/social_icons/twitter.png"></li>
-          <li><img src="/images/social_icons/facebook.png"></li>
-          <li><img src="/images/social_icons/linkedin.png"></li>
-          <li><img src="/images/social_icons/googleplus.png"></li>
-          <li><img src="/images/social_icons/pinterest.png"></li>
-          <li><img src="/images/social_icons/email.png"></li>
-        </ul>
-      </aside>
-    </div>
+    {{> _profile}}
 
     <div class="col-md-8">
       <article>
