--- a/express/blog/views/static/contact.html
+++ b/express/blog/views/static/contact.html
@@ -1,20 +1,4 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/posts">KINGSLEY IJOMAH</a>
-    <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="/posts">Posts</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/posts/archive">Archive</a></li>
-        <li class="active"><a href="/contact">Contact</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/posts/new" class="new-post-link">New Post</a></li>
-        <li><a href="/login">Log In</a></li>
-      </ul>
-    </div><!--/.nav-collapse -->
-  </div><!--/.container-fluid -->
-</nav>
+{{> _nav}}
 
 <div class="container-fluid" id="container">
   <div class="row">
