--- a/express/blog/views/layout.ejs
+++ b/express/blog/views/layout.ejs
@@ -8,10 +8,6 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-
-    <script src='/assets/application.js'></script>
-    <link rel="stylesheet" type="text/css" href="/assets/main.css">
-
     <link rel="stylesheet" type="text/css" href="/stylesheets/default.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -21,7 +17,8 @@
     <![endif]-->
   </head>
   <body>
-    {{{body}}}
+
+    <%- body %>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
