Update hbs view partials to ejs

--- a/express/blog/views/static/contact.ejs
+++ b/express/blog/views/static/contact.ejs
@@ -1,8 +1,8 @@
-{{> _nav}}
+<%- include('../partials/_nav'); -%>
 
 <div class="container-fluid" id="container">
   <div class="row">
-    {{> _profile}}
+    <%- include('../partials/_profile'); -%>
 
     <div class="col-md-8">
       <h1>Contact me</h1>
