--- a/express/blog/views/layout.ejs
+++ b/express/blog/views/layout.ejs
@@ -9,6 +9,8 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/default.css">
+    <%- css('main') %>
+    <%- css('application') %>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
