--- a/express/blog/views/posts/index.ejs
+++ b/express/blog/views/posts/index.ejs
@@ -7,24 +7,25 @@
     <%- partial('../partials/_profile') %>
 
     <div class="col-md-8">
-      <article>
-        <header><h2>Quis nostrud exercitation ullamco</h2></header>
-        <footer><small>Posted on: 1 Jan 2015</small></footer>
+      <% posts.forEach(function(post) { %>
+          <article>
+            <header><h2><%- post.title %></h2></header>
+            <footer><small>Posted on: 1 Jan 2015</small></footer>
 
-        <div class="lead">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et.
-          <a href="/posts/view" style="font-size: 20px;">Read More</a>
-        </div>
+            <div class="lead">
+              <%- post.article %>
+              <a href="/posts/view" style="font-size: 20px;">Read More</a>
+            </div>
 
-        <footer>
-            <span class="label label-default">code</span>
-            <span class="label label-default">programming</span>
-            <span class="label label-default">coding</span>
-        </footer>
-        <hr>
-      </article>
-
+            <footer>
+                <span class="label label-default">code</span>
+                <span class="label label-default">programming</span>
+                <span class="label label-default">coding</span>
+            </footer>
+            <hr>
+          </article>
+      <% }); %>
+    
       <nav>
         <ul class="pagination">
           <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
