--- a/express/blog/views/posts/new.ejs
+++ b/express/blog/views/posts/new.ejs
@@ -15,8 +15,8 @@
         </p>
         <p>
           <label class="sr-only">Tags</label>
-          <select class="form-control" class="multiselect" multiple="multiple" name="tags" required>
-            <option selected="selected">Select tags:</option>
+          <select data-placeholder="Select tags" multiple class="chosen-select form-control multiselect" required>
+            <option value=""></option>
             <option>html</option>
             <option>css</option>
             <option>coding</option>
