Fix(Issue with saving tags array into database)

--- a/express/blog/views/posts/new.ejs
+++ b/express/blog/views/posts/new.ejs
@@ -15,7 +15,7 @@
         </p>
         <p>
           <label class="sr-only">Tags</label>
-          <select data-placeholder="Select tags" multiple class="chosen-select form-control multiselect" required>
+          <select data-placeholder="Select tags" multiple class="chosen-select form-control multiselect" name="tags" required>
             <option value=""></option>
             <option>html</option>
             <option>css</option>
