--- a/express/blog/views/posts/index.ejs
+++ b/express/blog/views/posts/index.ejs
@@ -10,7 +10,7 @@
       <% posts.forEach(function(post) { %>
           <article>
             <header><h2><%- post.title %></h2></header>
-            <footer><small>Posted on: <%- post.created_at %></small></footer>
+            <footer><small>Posted on: <%- formatDate(post.created_at) %></small></footer>
 
             <div class="lead">
               <%- post.article %>
