Clean vendor/js remove css files

--- a/express/blog/views/posts/new.ejs
+++ b/express/blog/views/posts/new.ejs
@@ -16,7 +16,7 @@
         <p>
           <label class="sr-only">Tags</label>
           <select data-placeholder="Select tags" multiple class="chosen-select form-control multiselect" name="tags" required>
-            <option value=""></option>
+            <option></option>
             <option>html</option>
             <option>css</option>
             <option>coding</option>
