Update read more link to point to posts/:post_id

--- a/express/blog/views/posts/index.ejs
+++ b/express/blog/views/posts/index.ejs
@@ -14,7 +14,7 @@
 
             <div class="lead">
               <%- excerpt(post.article, 30) %>
-              <a href="/posts/view" style="font-size: 20px;">Read More</a>
+              <a href="/posts/<%- post._id %>" style="font-size: 20px;">Read More</a>
             </div>
 
             <footer>
