--- a/express/blog/views/posts/view.ejs
+++ b/express/blog/views/posts/view.ejs
@@ -7,15 +7,8 @@
     <%- partial('../partials/_profile') %>
 
     <div class="col-md-8">
-      <h1>Lorem ipsum dolor sit amet, consectetur adipisicing</h1>
-      <div class="lead">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </div>
+      <h1><%- post.title %></h1>
+      <div class="lead"><%- post.article %></div>
 
       <div id="comments">
         <h2>Comments</h2>
