Display list of validation errors in view

--- a/express/blog/views/posts/new.ejs
+++ b/express/blog/views/posts/new.ejs
@@ -10,12 +10,22 @@
       <form method="POST" action="/posts">
         <h3>New Post</h3>
         <p>
+          <small class="text-danger">
+            <% if (errors.title) { %>
+              <%- errors.title %>
+            <% } %>
+          </small>
           <label class="sr-only">Title</label>
-          <input type="text" class="form-control" placeholder="Title" name="title" required autofocus>
+          <input type="text" class="form-control" placeholder="Title" name="title" autofocus>
         </p>
         <p>
+          <small class="text-danger">
+            <% if (errors.tags) { %>
+              <%- errors.tags %>
+            <% } %>
+          </small>
           <label class="sr-only">Tags</label>
-          <select data-placeholder="Select tags" multiple class="chosen-select form-control multiselect" name="tags" required>
+          <select data-placeholder="Select tags" multiple class="chosen-select form-control multiselect" name="tags">
             <option></option>
             <option>html</option>
             <option>css</option>
@@ -24,8 +34,13 @@
           </select>
         </p>
         <p>
+          <small class="text-danger">
+            <% if (errors.article) { %>
+              <%- errors.article %>
+            <% } %>
+          </small>
           <label class="sr-only">Article</label>
-          <textarea class="form-control" placeholder="Article" id="textarea" name="article" required></textarea>
+          <textarea class="form-control" placeholder="Article" id="textarea" name="article"></textarea>
         </p>
         <p><input type="submit" value="Post Article" class="btn btn-primary"></p>
       </form>
