--- a/express/blog/views/posts/new.ejs
+++ b/express/blog/views/posts/new.ejs
@@ -11,7 +11,7 @@
         <h3>New Post</h3>
         <p>
           <label class="sr-only">Title</label>
-          <input type="text" class="form-control" placeholder="Title" name="title" required autofocus>
+          <input type="text" class="form-control" placeholder="Title" name="title" value="<%- post.title %>" autofocus>
           <small class="text-danger">
             <% if (typeof errors !== 'undefined' && errors.hasOwnProperty('title')) { %>
               <%- errors.title %>
@@ -34,7 +34,7 @@
         </p>
         <p>
           <label class="sr-only">Article</label>
-          <textarea class="form-control" placeholder="Article" id="textarea" name="article" required></textarea>
+          <textarea class="form-control" placeholder="Article" id="textarea" name="article"><%- post.article %></textarea>
           <small class="text-danger">
             <% if (typeof errors !== 'undefined' && errors.hasOwnProperty('article')) { %>
               <%- errors.article %>
